<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_4"
    android:layout_marginTop="@dimen/margin_4"
    android:layout_marginEnd="@dimen/margin_4"
    android:layout_marginBottom="2dp"
    app:cardCornerRadius="48dp"
    app:cardElevation="@dimen/margin_8"
    android:gravity="center"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/material_card_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:cardCornerRadius="48dp"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/item_img_person"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/person_image"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_launcher_background" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/item_txt_name_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:layout_marginStart="90dp"
        android:layout_marginTop="@dimen/margin_8"
        android:fontFamily="@font/comic_bold"
        android:text="@string/name"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/font_size_16"
        android:textDirection="ltr"/>

    <TextView
        android:textDirection="ltr"
        android:id="@+id/item_txt_phone_number_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end|center"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/comic_bold"
        android:text="@string/phone_number_example"
        android:textColor="@color/grey"
        android:textSize="12sp" />

</com.google.android.material.card.MaterialCardView>